# ai-chat-bot

./: .coverage  .env.example  .gitattributes  .gitignore  LICENSE  README.md  conftest.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  skills-lock.json
board/: board.md  plan.md  tasks.md
docs/: algorithms.md  api.md  architecture.md  change-request.md  content-dump.md  domain-model.md  legacy-warnings.md  project-overview.md  usage-guide.md
prompts/: prompt_10_cycle_fix.xml  prompt_10_tests.xml  prompt_11_cycle_fix.xml  prompt_12_ci.xml  prompt_1_phase_1_feature_1_refactoring.xml  prompt_1_phase_1_feature_2_legacy_audit.xml  prompt_1_phase_2_feature_3_remove_provocation_logic.xml  prompt_2_phase_1_feature_1_pseudo-memory.xml  prompt_3_phase_1_feature_1_context-limitation.xml  prompt_5_phase_1_feature_1_system-prompt.xml  prompt_7_agentic_loop.xml  prompt_7_thinking_models.xml  prompt_8_modulith.xml  prompt_9_security.xml
scripts/: demo_agent.py
src/: bootstrap.py  bot.py  config.py  context_logging.py  contracts.py  conversation.py  errors.py  handlers.py  history.py  llm.py  ollama_gateway.py  prompts.py  runtime.py  summarizer.py
tests/: README.md  _fakes.py  conftest.py  test_agent_loop_logic.py  test_agent_parser_contract.py  test_agent_tools_contract.py  test_bootstrap_model_selection.py  test_chat_flow_events.py  test_chat_orchestrator_logic.py  test_chat_service.py  test_chat_service_logic.py  test_config_settings.py  test_context_logging.py  test_conversation_service.py  test_domain_allowlist.py  test_event_bus.py  (+26 more)
(+150 files in other folders)
