[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["__pycache__", ".git", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = "(^build/|^dist/|__pycache__)"

[project]
name = "ai-chat-bot"
version = "0.1.0"
description = "Telegram bot backed by local Ollama models"
requires-python = ">=3.10"
dependencies = [
  "aiogram==3.15.0",
  "httpx==0.28.1",
  "python-dotenv==1.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]
